style.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap");

:root {
  --v-d-g-blue: hsl(217, 19%, 35%);
  --d-d-blue: hsl(214, 17%, 51%);
  --g-blue: hsl(212, 23%, 69%);
  --l-g-blue: hsl(210, 46%, 95%);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-size: 13px;
  font-family: "Manrope", sans-serif;
}

main {
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  /* background:#eee; */
}

.card {
  max-height: 500px;
  width: clamp(365px, 75%, 700px);
  display: flex;
  /* background:red; */
  overflow: hidden;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.image {
  display: flex;
  width: 40%;
  align-items: center;
  justify-content: center;
}

.image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.content {
  width: 60%;
  height: 100%;
}
.main-content {
  padding: 32px 32px 0 32px;
}
.heading {
  font-size: 1.5rem;
  font-weight: 700;
  color: var(--v-d-g-blue);
}

.main-para {
  margin-top: 1rem;
  color: var(--v-d-g-blue);
  font-size: 1rem;
  line-height: 23px;
}

.profile {
  width: 100%;
  margin-top: 2rem;
  /* background: red; */
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding:0 4.6rem 1.7rem 32px;
}

.profile .details {
  display: flex;
  gap:20px;
}

.profile-img {
  width: 45px;
  height: 45px;
  overflow: hidden;
  object-fit: cover;
  border-radius: 50%;
}



.profile .details .name {
    color:var(--d-d-blue);
}
.profile .details .name span{
    font-size:1.2rem;
    font-weight: 700;
    color:var(--v-d-g-blue);
}

.profile-img img {
  width: 100%;
  height: 100%;
}

.share-feature{
    position: relative;
    display: flex;
}

.share-feature .share-btn{
    background:var(--d-d-blue);
    padding:12px;
    border-radius:50%;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
    cursor:pointer;
    color: var(--l-g-blue);
}

.share-feature .share-menu{
    background:var(--v-d-g-blue);
    display:flex;
    position: absolute;
    color:var(--l-g-blue);
    align-items: center;
    justify-content: space-between;
    width:100px;
    padding:10px 20px;
    border-radius:5px;
    left:-5rem;
    top:-2rem;
}

